# rss-reader

./: .gitignore
rss-reader/: Cargo.toml  test
rss-reader/src/: main.rs  site.rs  site_list  template.rs
shared/: Cargo.toml
shared/src/: lib.rs
