[package]
name = "rss-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.16"
rss = "2.0.3"
tokio = {version="1.28.0", features=["full"]}
actix-web = "4.3.1"
serde = { version="1.0.166", features=["derive"]}
chrono = "0.4.26"
serde_json = "1.0.100"
